<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".BasicMapActivity">
    <item
        android:id="@+id/action_details"
        android:orderInCategory="100"
        android:title="@string/action_details"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_truck_restrictions"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="true"
        android:title="@string/action_truck_restrictions"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_traffic"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="true"
        android:title="@string/action_traffic"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_simulate_guidance"
        android:orderInCategory="100"
        android:checkable="true"
        android:checked="true"
        android:title="@string/action_simulate_guidance"
        app:showAsAction="never"/>
</menu>
