<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/transparent"
              android:clipChildren="false"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="invisible"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/shadow"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/job_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/job_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/job_id"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/start_job"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:visibility="invisible"
            android:text="@string/start_job"/>

        <Button
            android:id="@+id/abort_job"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:visibility="invisible"
            android:text="@string/abort_job"/>

        <Button
            android:id="@+id/reject_job"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:visibility="invisible"
            android:text="@string/reject_job"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/start_job"
            android:layout_below="@id/job_message">

            <ProgressBar
                android:id="@+id/job_details_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true"/>

            <LinearLayout
                android:id="@+id/job_details"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_clock"/>
                    <TextView
                        android:id="@+id/job_tta"
                        android:layout_marginLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/not_available"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_distance"/>
                    <TextView
                        android:id="@+id/job_distance"
                        android:layout_marginLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/not_available"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

    </RelativeLayout>


</LinearLayout>